--- a/index.html
+++ b/index.html
@@ -4,29 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculo Laboratório de Dexter</title>
+    <title>Apresentação Pessoal</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <section>
-        <h1>Dexter, Laboratório de</h1>
-    
-        <img src="assets/imagens/Dexter_PUTO.jpg">
-    </section>
-    <section>
-        <h2>Informações Pessoais</h2>
-        <ul>
-            <li>Sexo: Masculino</li>
-            <li>Idade: 8 anos</li>
-        </ul>
-    </section>
-    <section>
-        <h2>Informações de contato</h2>
-        <ul>
-            <li>Telefone: 01111110</li>
-            <li>E-mail: laboratório.dexter@cartoonnetwork.com</li>
-            <li>Rua Você Não Deve Saber, 001</li>
-        </ul>
-    </section>
-
+    <div class="container">
+        <div class="row-12 text-center">
+            <section id: "Eu">
+                <h1>Kevin Alessandro de Lima</h1>
+            </section>
+        </div>
+        <section id: "SobreMim">
+            <h2>Sobre mim</h2>
+            <ul>
+                <li>Sou de junho de 1998 e tenho 23 anos.</li>
+                <li>Moro em São Paulo, zona sul.</li>
+            </ul>
+        </section>
+        <section id: "Formacao">
+            <h2>Formação</h2>
+            <ul>
+                <li>Análise e Desenvolvimento de Sistemas (2º Semestre)</li>
+                <h4>Conhecimentos</h4>
+                <ul>
+                    <li>Algoritmo.</li>
+                    <li>Java Orientado a Objeto.</li>
+                    <li>Git e GitHub.</li>
+                </ul>
+            </ul>
+        </section>
+        <section id: "Experiencias">
+            <h2>Experiências</h2>
+            <ul>
+                <li>Já trabalhei em diversos lugares, mas sempre informalmente.</li>
+                <li>Meu último trabalho foi como coordenador de eventos.</li>
+                <li>Trabalho com meu pai na marcenária dele sempre que estou disponível.</li>
+            </ul>
+        </section>
+        <section id: "Curiosidades">
+            <h2>Algumas curiosidades</h2>
+            <ul>
+                <li>Meus amigos, normalmente, me chamam de Aleh ou de Nick.</li>
+                <li>Desde 2018 eu jogo futsal e já joguei em uns 10 times diferentes.</li>
+                <li>Moro apenas com a minha namorada à 18 meses. E vem dado certo por enquanto. :)</li>
+                <li>Ultimamente tenho me interessado muito em todo o conceito de Salesforce.</li>
+            </ul>
+        </section>
+    </div>
 </body>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
+crossorigin="anonymous"></script>
 </html>
