--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li>Análise e Desenvolvimento de Sistemas (2º Semestre)</li>
                 <h4>Conhecimentos</h4>
                 <ul>
-                    <li>Algoritmo.</li>
+                    <li>Lógica de Programação.</li>
                     <li>Java Orientado a Objeto.</li>
                     <li>Git e GitHub.</li>
                 </ul>
